Merijn/src/ql/generated_parser/QLParser.js
// Generated from C:/Users/mwijngaard/Documents/Projects/multi-ql/Merijn/src/ql\QL.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var QLListener = require('./QLListener').QLListener;
var QLVisitor = require('./QLVisitor').QLVisitor;

var grammarFileName = "QL.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'Form'", "'if'", "'else'", "'boolean'", "'string'", 
                     "'integer'", "'float'", "'money'", "'{'", "'}'", "'('", 
                     "')'", "';'", "'=='", "'!='", "'>'", "'>='", "'<'", 
                     "'<='", "'+'", "'-'", "'*'", "'/'", "'='", "'&&'", 
                     "'||'", "'!'" ];

var symbolicNames = [ 'null', "FORM", "IF", "ELSE", "TYPE_BOOLEAN", "TYPE_STRING", 
                      "TYPE_INTEGER", "TYPE_FLOAT", "TYPE_MONEY", "LEFT_BRACE", 
                      "RIGHT_BRACE", "LEFT_PAREN", "RIGHT_PAREN", "SEMICOL", 
                      "EQ", "NOT_EQ", "GT", "GT_EQ", "LT", "LT_EQ", "PLUS", 
                      "MINUS", "MUL", "DIV", "ASSIGN", "AND", "OR", "NOT", 
                      "STRING_LITERAL", "INTEGER_LITERAL", "FLOAT_LITERAL", 
                      "MONEY_LITERAL", "MONEY_LITERAL_CENTS", "BOOLEAN_LITERAL", 
                      "IDENTIFIER", "WHITESPACE" ];

var ruleNames =  [ "form", "block", "statement", "if_", "question", "expr", 
                   "literal", "type" ];

function QLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

QLParser.prototype = Object.create(antlr4.Parser.prototype);
QLParser.prototype.constructor = QLParser;

Object.defineProperty(QLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

QLParser.EOF = antlr4.Token.EOF;
QLParser.FORM = 1;
QLParser.IF = 2;
QLParser.ELSE = 3;
QLParser.TYPE_BOOLEAN = 4;
QLParser.TYPE_STRING = 5;
QLParser.TYPE_INTEGER = 6;
QLParser.TYPE_FLOAT = 7;
QLParser.TYPE_MONEY = 8;
QLParser.LEFT_BRACE = 9;
QLParser.RIGHT_BRACE = 10;
QLParser.LEFT_PAREN = 11;
QLParser.RIGHT_PAREN = 12;
QLParser.SEMICOL = 13;
QLParser.EQ = 14;
QLParser.NOT_EQ = 15;
QLParser.GT = 16;
QLParser.GT_EQ = 17;
QLParser.LT = 18;
QLParser.LT_EQ = 19;
QLParser.PLUS = 20;
QLParser.MINUS = 21;
QLParser.MUL = 22;
QLParser.DIV = 23;
QLParser.ASSIGN = 24;
QLParser.AND = 25;
QLParser.OR = 26;
QLParser.NOT = 27;
QLParser.STRING_LITERAL = 28;
QLParser.INTEGER_LITERAL = 29;
QLParser.FLOAT_LITERAL = 30;
QLParser.MONEY_LITERAL = 31;
QLParser.MONEY_LITERAL_CENTS = 32;
QLParser.BOOLEAN_LITERAL = 33;
QLParser.IDENTIFIER = 34;
QLParser.WHITESPACE = 35;

QLParser.RULE_form = 0;
QLParser.RULE_block = 1;
QLParser.RULE_statement = 2;
QLParser.RULE_if_ = 3;
QLParser.RULE_question = 4;
QLParser.RULE_expr = 5;
QLParser.RULE_literal = 6;
QLParser.RULE_type = 7;

function FormContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLParser.RULE_form;
    return this;
}

FormContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormContext.prototype.constructor = FormContext;

FormContext.prototype.FORM = function() {
    return this.getToken(QLParser.FORM, 0);
};

FormContext.prototype.IDENTIFIER = function() {
    return this.getToken(QLParser.IDENTIFIER, 0);
};

FormContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

FormContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterForm(this);
	}
};

FormContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitForm(this);
	}
};

FormContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitForm(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLParser.FormContext = FormContext;

QLParser.prototype.form = function() {

    var localctx = new FormContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, QLParser.RULE_form);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 16;
        this.match(QLParser.FORM);
        this.state = 17;
        this.match(QLParser.IDENTIFIER);
        this.state = 18;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.LEFT_BRACE = function() {
    return this.getToken(QLParser.LEFT_BRACE, 0);
};

BlockContext.prototype.RIGHT_BRACE = function() {
    return this.getToken(QLParser.RIGHT_BRACE, 0);
};

BlockContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitBlock(this);
	}
};

BlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLParser.BlockContext = BlockContext;

QLParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, QLParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 20;
        this.match(QLParser.LEFT_BRACE);
        this.state = 24;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===QLParser.IF || _la===QLParser.STRING_LITERAL) {
            this.state = 21;
            this.statement();
            this.state = 26;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 27;
        this.match(QLParser.RIGHT_BRACE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;


 
StatementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function IfStatementCaseContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IfStatementCaseContext.prototype = Object.create(StatementContext.prototype);
IfStatementCaseContext.prototype.constructor = IfStatementCaseContext;

QLParser.IfStatementCaseContext = IfStatementCaseContext;

IfStatementCaseContext.prototype.if_ = function() {
    return this.getTypedRuleContext(If_Context,0);
};
IfStatementCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterIfStatementCase(this);
	}
};

IfStatementCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitIfStatementCase(this);
	}
};

IfStatementCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitIfStatementCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function QuestionStatementCaseContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

QuestionStatementCaseContext.prototype = Object.create(StatementContext.prototype);
QuestionStatementCaseContext.prototype.constructor = QuestionStatementCaseContext;

QLParser.QuestionStatementCaseContext = QuestionStatementCaseContext;

QuestionStatementCaseContext.prototype.question = function() {
    return this.getTypedRuleContext(QuestionContext,0);
};

QuestionStatementCaseContext.prototype.SEMICOL = function() {
    return this.getToken(QLParser.SEMICOL, 0);
};
QuestionStatementCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterQuestionStatementCase(this);
	}
};

QuestionStatementCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitQuestionStatementCase(this);
	}
};

QuestionStatementCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitQuestionStatementCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};



QLParser.StatementContext = StatementContext;

QLParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, QLParser.RULE_statement);
    try {
        this.state = 33;
        switch(this._input.LA(1)) {
        case QLParser.IF:
            localctx = new IfStatementCaseContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 29;
            this.if_();
            break;
        case QLParser.STRING_LITERAL:
            localctx = new QuestionStatementCaseContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 30;
            this.question();
            this.state = 31;
            this.match(QLParser.SEMICOL);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function If_Context(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLParser.RULE_if_;
    return this;
}

If_Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
If_Context.prototype.constructor = If_Context;


 
If_Context.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function IfElseCaseContext(parser, ctx) {
	If_Context.call(this, parser);
    If_Context.prototype.copyFrom.call(this, ctx);
    return this;
}

IfElseCaseContext.prototype = Object.create(If_Context.prototype);
IfElseCaseContext.prototype.constructor = IfElseCaseContext;

QLParser.IfElseCaseContext = IfElseCaseContext;

IfElseCaseContext.prototype.IF = function() {
    return this.getToken(QLParser.IF, 0);
};

IfElseCaseContext.prototype.LEFT_PAREN = function() {
    return this.getToken(QLParser.LEFT_PAREN, 0);
};

IfElseCaseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

IfElseCaseContext.prototype.RIGHT_PAREN = function() {
    return this.getToken(QLParser.RIGHT_PAREN, 0);
};

IfElseCaseContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};

IfElseCaseContext.prototype.ELSE = function() {
    return this.getToken(QLParser.ELSE, 0);
};
IfElseCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterIfElseCase(this);
	}
};

IfElseCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitIfElseCase(this);
	}
};

IfElseCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitIfElseCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function IfCaseContext(parser, ctx) {
	If_Context.call(this, parser);
    If_Context.prototype.copyFrom.call(this, ctx);
    return this;
}

IfCaseContext.prototype = Object.create(If_Context.prototype);
IfCaseContext.prototype.constructor = IfCaseContext;

QLParser.IfCaseContext = IfCaseContext;

IfCaseContext.prototype.IF = function() {
    return this.getToken(QLParser.IF, 0);
};

IfCaseContext.prototype.LEFT_PAREN = function() {
    return this.getToken(QLParser.LEFT_PAREN, 0);
};

IfCaseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

IfCaseContext.prototype.RIGHT_PAREN = function() {
    return this.getToken(QLParser.RIGHT_PAREN, 0);
};

IfCaseContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};
IfCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterIfCase(this);
	}
};

IfCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitIfCase(this);
	}
};

IfCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitIfCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};



QLParser.If_Context = If_Context;

QLParser.prototype.if_ = function() {

    var localctx = new If_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 6, QLParser.RULE_if_);
    try {
        this.state = 49;
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            localctx = new IfCaseContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 35;
            this.match(QLParser.IF);
            this.state = 36;
            this.match(QLParser.LEFT_PAREN);
            this.state = 37;
            this.expr(0);
            this.state = 38;
            this.match(QLParser.RIGHT_PAREN);
            this.state = 39;
            this.block();
            break;

        case 2:
            localctx = new IfElseCaseContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 41;
            this.match(QLParser.IF);
            this.state = 42;
            this.match(QLParser.LEFT_PAREN);
            this.state = 43;
            this.expr(0);
            this.state = 44;
            this.match(QLParser.RIGHT_PAREN);
            this.state = 45;
            this.block();
            this.state = 46;
            this.match(QLParser.ELSE);
            this.state = 47;
            this.block();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function QuestionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLParser.RULE_question;
    return this;
}

QuestionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QuestionContext.prototype.constructor = QuestionContext;


 
QuestionContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function QuestionCaseContext(parser, ctx) {
	QuestionContext.call(this, parser);
    QuestionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

QuestionCaseContext.prototype = Object.create(QuestionContext.prototype);
QuestionCaseContext.prototype.constructor = QuestionCaseContext;

QLParser.QuestionCaseContext = QuestionCaseContext;

QuestionCaseContext.prototype.STRING_LITERAL = function() {
    return this.getToken(QLParser.STRING_LITERAL, 0);
};

QuestionCaseContext.prototype.IDENTIFIER = function() {
    return this.getToken(QLParser.IDENTIFIER, 0);
};

QuestionCaseContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};
QuestionCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterQuestionCase(this);
	}
};

QuestionCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitQuestionCase(this);
	}
};

QuestionCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitQuestionCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ExprQuestionCaseContext(parser, ctx) {
	QuestionContext.call(this, parser);
    QuestionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExprQuestionCaseContext.prototype = Object.create(QuestionContext.prototype);
ExprQuestionCaseContext.prototype.constructor = ExprQuestionCaseContext;

QLParser.ExprQuestionCaseContext = ExprQuestionCaseContext;

ExprQuestionCaseContext.prototype.STRING_LITERAL = function() {
    return this.getToken(QLParser.STRING_LITERAL, 0);
};

ExprQuestionCaseContext.prototype.IDENTIFIER = function() {
    return this.getToken(QLParser.IDENTIFIER, 0);
};

ExprQuestionCaseContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

ExprQuestionCaseContext.prototype.ASSIGN = function() {
    return this.getToken(QLParser.ASSIGN, 0);
};

ExprQuestionCaseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
ExprQuestionCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterExprQuestionCase(this);
	}
};

ExprQuestionCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitExprQuestionCase(this);
	}
};

ExprQuestionCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitExprQuestionCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};



QLParser.QuestionContext = QuestionContext;

QLParser.prototype.question = function() {

    var localctx = new QuestionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, QLParser.RULE_question);
    try {
        this.state = 60;
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            localctx = new QuestionCaseContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 51;
            this.match(QLParser.STRING_LITERAL);
            this.state = 52;
            this.match(QLParser.IDENTIFIER);
            this.state = 53;
            this.type();
            break;

        case 2:
            localctx = new ExprQuestionCaseContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 54;
            this.match(QLParser.STRING_LITERAL);
            this.state = 55;
            this.match(QLParser.IDENTIFIER);
            this.state = 56;
            this.type();
            this.state = 57;
            this.match(QLParser.ASSIGN);
            this.state = 58;
            this.expr(0);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;


 
ExprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function UnaryPrefixExprCaseContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

UnaryPrefixExprCaseContext.prototype = Object.create(ExprContext.prototype);
UnaryPrefixExprCaseContext.prototype.constructor = UnaryPrefixExprCaseContext;

QLParser.UnaryPrefixExprCaseContext = UnaryPrefixExprCaseContext;

UnaryPrefixExprCaseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

UnaryPrefixExprCaseContext.prototype.NOT = function() {
    return this.getToken(QLParser.NOT, 0);
};

UnaryPrefixExprCaseContext.prototype.MINUS = function() {
    return this.getToken(QLParser.MINUS, 0);
};
UnaryPrefixExprCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterUnaryPrefixExprCase(this);
	}
};

UnaryPrefixExprCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitUnaryPrefixExprCase(this);
	}
};

UnaryPrefixExprCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitUnaryPrefixExprCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ParenExprCaseContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ParenExprCaseContext.prototype = Object.create(ExprContext.prototype);
ParenExprCaseContext.prototype.constructor = ParenExprCaseContext;

QLParser.ParenExprCaseContext = ParenExprCaseContext;

ParenExprCaseContext.prototype.LEFT_PAREN = function() {
    return this.getToken(QLParser.LEFT_PAREN, 0);
};

ParenExprCaseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ParenExprCaseContext.prototype.RIGHT_PAREN = function() {
    return this.getToken(QLParser.RIGHT_PAREN, 0);
};
ParenExprCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterParenExprCase(this);
	}
};

ParenExprCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitParenExprCase(this);
	}
};

ParenExprCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitParenExprCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function InfixExprCaseContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

InfixExprCaseContext.prototype = Object.create(ExprContext.prototype);
InfixExprCaseContext.prototype.constructor = InfixExprCaseContext;

QLParser.InfixExprCaseContext = InfixExprCaseContext;

InfixExprCaseContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

InfixExprCaseContext.prototype.MUL = function() {
    return this.getToken(QLParser.MUL, 0);
};

InfixExprCaseContext.prototype.DIV = function() {
    return this.getToken(QLParser.DIV, 0);
};

InfixExprCaseContext.prototype.PLUS = function() {
    return this.getToken(QLParser.PLUS, 0);
};

InfixExprCaseContext.prototype.MINUS = function() {
    return this.getToken(QLParser.MINUS, 0);
};

InfixExprCaseContext.prototype.EQ = function() {
    return this.getToken(QLParser.EQ, 0);
};

InfixExprCaseContext.prototype.NOT_EQ = function() {
    return this.getToken(QLParser.NOT_EQ, 0);
};

InfixExprCaseContext.prototype.GT = function() {
    return this.getToken(QLParser.GT, 0);
};

InfixExprCaseContext.prototype.GT_EQ = function() {
    return this.getToken(QLParser.GT_EQ, 0);
};

InfixExprCaseContext.prototype.LT = function() {
    return this.getToken(QLParser.LT, 0);
};

InfixExprCaseContext.prototype.LT_EQ = function() {
    return this.getToken(QLParser.LT_EQ, 0);
};

InfixExprCaseContext.prototype.AND = function() {
    return this.getToken(QLParser.AND, 0);
};

InfixExprCaseContext.prototype.OR = function() {
    return this.getToken(QLParser.OR, 0);
};
InfixExprCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterInfixExprCase(this);
	}
};

InfixExprCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitInfixExprCase(this);
	}
};

InfixExprCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitInfixExprCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function IdentifierExprCaseContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IdentifierExprCaseContext.prototype = Object.create(ExprContext.prototype);
IdentifierExprCaseContext.prototype.constructor = IdentifierExprCaseContext;

QLParser.IdentifierExprCaseContext = IdentifierExprCaseContext;

IdentifierExprCaseContext.prototype.IDENTIFIER = function() {
    return this.getToken(QLParser.IDENTIFIER, 0);
};
IdentifierExprCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterIdentifierExprCase(this);
	}
};

IdentifierExprCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitIdentifierExprCase(this);
	}
};

IdentifierExprCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitIdentifierExprCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LiteralExprCaseContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LiteralExprCaseContext.prototype = Object.create(ExprContext.prototype);
LiteralExprCaseContext.prototype.constructor = LiteralExprCaseContext;

QLParser.LiteralExprCaseContext = LiteralExprCaseContext;

LiteralExprCaseContext.prototype.literal = function() {
    return this.getTypedRuleContext(LiteralContext,0);
};
LiteralExprCaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.enterLiteralExprCase(this);
	}
};

LiteralExprCaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLListener ) {
        listener.exitLiteralExprCase(this);
	}
};

LiteralExprCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLVisitor ) {
        return visitor.visitLiteralExprCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};



QLParser.prototype.expr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ExprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 10;
    this.enterRecursionRule(localctx, 10, QLParser.RULE_expr, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        switch(this._input.LA(1)) {
        case QLParser.MINUS:
        case QLParser.NOT:
            localctx = new UnaryPrefixExprCaseContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
